<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sticky Notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_text">Enter your email address and password to access your notes</string>
    <string name="welcome_text">Welcome to Sticky Notes</string>
    <string name="email_text">test@example.org</string>
    <string name="password_text">password</string>
    <string name="login_button_text">Continue</string>
    <string name="create_note_text">New Note</string>
    <string name="create_note_title">Note</string>
    <string name="create_note_date">Remind me&#8230;</string>
    <string name="note_list_add">+</string>
    <string name="create_note_save">Create Note</string>
    <string name="create_account">Create Account</string>
    <string name="search_hint">Search notes...</string>
</resources>
