<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteList"
    android:layout_margin="5dp">

    <Button
        android:id="@+id/addNote"
        style="@style/ButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/note_list_add"
        android:layout_marginBottom="5dp" />

    <ListView
        android:id="@+id/notelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchNotes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/createAccountButton"
        style="@style/ButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/searchNotes"
        android:layout_alignLeft="@+id/notelist"
        android:text="@string/create_account"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/searchNotes"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notelist"
        android:layout_alignRight="@+id/notelist"
        android:layout_below="@+id/addNote"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/search_hint"
        android:layout_marginBottom="5dp">
    </EditText>

</RelativeLayout>